Bug 1706387 - Make sure all mailnews nsIChannel implementations have loadInfo set. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D114911

--HG--
extra : amend_source : 0c3e551b1396d6cef6f9c84b58ca9d9553c29434